C++ Exercises/C++ Exercise Set2/.metadata/.plugins/org.eclipse.cdt.ui/Intro.build.log
16:25:22 **** Incremental Build of configuration Debug for project Intro ****
make all 
Building file: ../src/Intro.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -std=c++11 -MMD -MP -MF"src/Intro.d" -MT"src/Intro.d" -o "src/Intro.o" "../src/Intro.cpp"
../src/Intro.cpp:104:2: error: use of undeclared identifier 'vector_match'
        vector_match(matchArray, 6, 4);
        ^
1 error generated.
make: *** [src/Intro.o] Error 1

16:25:23 Build Finished (took 638ms)

